loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:2: error: not found: value baisseBrousse
baisseBrousse()
^