loopfor.LoopCourse.scala.code
setCouleurBrosse(Color.red)
baisseBrousse()
while (!estFaceMur()) {avance()}
gauche()
while (!estFaceMur()) {avance()}
gauche()
while (!estFaceMur()) {avance()}
gauche()
while (!estFaceMur()) {avance()}
gauche()